fix(app-router-cli): miss process not found of children

--- a/packages/app-router-cli/src/templates/router.hbs
+++ b/packages/app-router-cli/src/templates/router.hbs
@@ -19,3 +19,5 @@ const router = createRouter([{{#each routes}}{
   errorElement: <RootErrorElement notFound={ {{~undefinable (nameByFullPath this.props.notFound)~}} } />,
   children: {{{generateChildrenRoutes this.children}}}
 }{{/each}}])
+
+export default router
