--- a/packages/app-router-cli/src/templates/router.hbs
+++ b/packages/app-router-cli/src/templates/router.hbs
@@ -17,7 +17,7 @@ const router = createRouter([{{#each routes}}{
     </RouteSegmentElement>
     ), 
   errorElement: <RootErrorElement notFound={ {{~undefinable (nameByFullPath this.props.notFound)~}} } />,
-  children: {{{generateChildrenRoutes this.children}}}
-}{{/each}}])
+  children: {{{generateChildrenRoutes this.children}}} --}}
+ach}}])
 
 export default router
