--- a/packages/app-router-cli/src/templates/createRouter.hbs
+++ b/packages/app-router-cli/src/templates/createRouter.hbs
@@ -5,15 +5,16 @@ const router = createRouter([{{#each routes}}{
       {{~#unless (isNil this.props.loading)}} loading={ {{~escape this.props.loading~}} }{{/unless}}
       {{~#unless (isNil this.props.error)}} error={ {{~escape this.props.error~}} }{{/unless}}
       {{~#unless (isNil this.props.notFound)}} notFound={ {{~escape this.props.notFound~}} }{{/unless}}
-      {{~#unless (isNil this.props.template)}} notFound={ {{~escape this.props.template~}} }{{/unless~}}
+      {{~#unless (isNil this.props.template)}} template={ {{~escape this.props.template~}} }{{/unless~}}
     >
-      {{lazyImport this.props.layout}}
+      {{~lazyImport this.props.layout~}}
     </RootLayoutRouteElement>
   ), 
   errorElement: <RootErrorElement{{#unless (isNil this.props.notFound)}} notFound={ {{~escape this.props.notFound~}} }{{/unless}}/>
-  {{~#unless (isNilorEmpty this.children)}},
+  {{#unless (isNilorEmpty this.children)}},
   children: [{{generateChildrenRoutes this.children}}]
   {{/unless}}
+},
 {{/each}}]{{#unless (isUndefinedBasename basename)}}, {basename: "{{basename}}"}{{/unless}});
 
 export default router
