refactor(app-router-cli): use partial instead of block helpers

--- a/packages/app-router-cli/src/templates/childrenRoutes.hbs
+++ b/packages/app-router-cli/src/templates/childrenRoutes.hbs
@@ -4,7 +4,7 @@
   {{#if this.path}}path: "{{this.path}}",{{/if}}
   {{~#if this.index}}index: {{this.index}},{{/if}}
   element: (
-    <{{#if props.layout}}LayoutRouteElement{{else}}PageRouteElement{{/if}}
+    <{{#if this.props.layout}}LayoutRouteElement{{else}}PageRouteElement{{/if}}
       {{~#unless (isNil this.props.loading)}} loading={ {{~escape this.props.loading~}} }{{/unless}}
       {{~#unless (isNil this.props.error)}} error={ {{~escape this.props.error~}} }{{/unless}}
       {{~#unless (isNil this.props.notFound)}} notFound={ {{~escape this.props.notFound~}} }{{/unless}}
@@ -15,10 +15,10 @@
       {{~else~}}
         {{~lazyImport this.props.page~}}
       {{/if~}}
-    </{{#if props.layout}}LayoutRouteElement{{else}}PageRouteElement{{/if}}>
+    </{{#if this.props.layout}}LayoutRouteElement{{else}}PageRouteElement{{/if}}>
   )
   {{#unless (isNilorEmpty this.children)}},
-  children: [{{generateChildrenRoutes this.children}}]
+  children: [{{> generateChildrenRoutes routes=this.children}}]
   {{/unless}}
 },
 {{/each}}
