--- a/packages/app-router-cli/src/templates/createRouter.hbs
+++ b/packages/app-router-cli/src/templates/createRouter.hbs
@@ -12,7 +12,7 @@ const router = createRouter([{{#each routes}}{
   ), 
   errorElement: <RootErrorElement{{#unless (isNil this.props.notFound)}} notFound={ {{~escape this.props.notFound~}} }{{/unless}}/>
   {{#unless (isNilorEmpty this.children)}},
-  children: [{{generateChildrenRoutes this.children}}]
+  children: [{{> generateChildrenRoutes routes=this.children}}]
   {{/unless}}
 },
 {{/each}}]{{#unless (isUndefinedBasename basename)}}, {basename: "{{basename}}"}{{/unless}});
