--- a/packages/app-router-cli/test/basic-routes/routerOutput.hbs
+++ b/packages/app-router-cli/test/basic-routes/routerOutput.hbs
@@ -1,3 +1,11 @@
+import { lazy } from "react";
+import { createBrowserRouter as createRouter } from "react-router-dom";
+import { RootErrorElement, RootLayoutRouteElement, PageRouteElement, LayoutRouteElement } from "@meta-ultra/app-router";
+import App_loading from "./app/loading";
+import App_globalError from "./app/global-error";
+import App_about_nested_notFound from "./app/about/nested/not-found";
+import App_home_error from "./app/home/error";
+
 const router = createRouter([{
   id: "app",
   element: (<RootLayoutRouteElement loading={App_loading} error={App_globalError}>{lazy(() => import("./app/layout"))}</RootLayoutRouteElement>),
