--- a/packages/app-router-cli/test/basic-routes/staticDefaultImportsOutput.hash.hbs
+++ b/packages/app-router-cli/test/basic-routes/staticDefaultImportsOutput.hash.hbs
@@ -1,7 +1,7 @@
 import { lazy } from "react";
 import { createHashRouter as createRouter } from "react-router-dom";
 import { RootErrorElement, RootLayoutRouteElement, PageRouteElement, LayoutRouteElement } from "@meta-ultra/app-router";
-import App_loading from "./app/loading.jsx";
-import App_globalError from "./app/global-error.js";
-import App_about_nested_notFound from "./app/about/nested/not-found.js";
-import App_home_error from "./app/home/error.jsx";
+import App_loading from "./app/loading";
+import App_globalError from "./app/global-error";
+import App_about_nested_notFound from "./app/about/nested/not-found";
+import App_home_error from "./app/home/error";
