--- a/packages/app-router-cli/src/templates/pageRouteElement.hbs
+++ b/packages/app-router-cli/src/templates/pageRouteElement.hbs
@@ -2,5 +2,5 @@
   {{~#unless (isNil props.loading)}} loading={ {{~escape props.loading~}} }{{/unless}}
   {{~#unless (isNil props.error)}} error={ {{~escape props.error~}} }{{/unless}}
   {{~#unless (isNil props.notFound)}} notFound={ {{~escape props.notFound~}} }{{/unless}}
-  {{~#unless (isNil props.template)}} template={ {{~escape props.template~}} }{{/unless~}}
-  {{~#if props.page}}>{{~lazyImport props.page~}}</PageRouteElement>{{else}}/>{{/if~}}
+  {{~#unless (isNil props.template)}} template={ {{~lazyImport props.template~}} }{{/unless~}}
+  {{~#if props.page}}>{ {{~lazyImport props.page~}} }</PageRouteElement>{{else}}/>{{/if~}}
