--- a/packages/app-router-cli/src/templates/childrenRoutes.hbs
+++ b/packages/app-router-cli/src/templates/childrenRoutes.hbs
@@ -9,6 +9,7 @@
   element: (
     {{~#if (isPageRoute this.type)}}{{> pageRouteElement this}}{{/if~}}
     {{~#if (isLayoutRoute this.type)}}{{> layoutRouteElement this}}{{/if~}}
+    {{~#if (isInterceptedRoute this.type)}}{{> interceptedRouteElement this}}{{/if~}}
   )
   {{~#unless (isNilorEmpty this.children)}},
   children: [{{> childrenRoutes routes=this.children}}]
