--- a/packages/app-router-cli/src/templates/interceptedRouteElement.hbs
+++ b/packages/app-router-cli/src/templates/interceptedRouteElement.hbs
@@ -1,5 +1,5 @@
 <InterceptedRouteElement
-  interceptingRouteElement={ {{~pageRouteElement this.props.intercepted~}} }
+  interceptingRouteElement={ {{~pageRouteElement props.intercepted~}} }
 >
   {{> pageRouteElement this}}
 </InterceptedRouteElement>
