feat(app-router-cli): supports for route handlers and fix some bugs
fix: #7

--- a/packages/app-router-cli/src/templates/createRouter.hbs
+++ b/packages/app-router-cli/src/templates/createRouter.hbs
@@ -15,6 +15,6 @@ const router = createRouter([{{#each routes}}{
   children: [{{> childrenRoutes routes=this.children}}]
   {{~/unless~}}
 },
-{{/each}}]{{#unless (isUndefinedBasename basename)}}, {basename: "{{basename}}"}{{/unless}});
+{{/each}}], normalizeCreateRouterOptions({{{basename}}}));
 
 export default router;
